# meloetta

./: Cargo.toml  README.md
src/: main.rs
src/events/: ban_add.rs  channel_delete.rs  channel_update.rs  guild_create.rs  guild_delete.rs  interaction_create.rs  member_remove.rs  message_delete.rs  mod.rs  ready.rs  unavailable_guild.rs  voice_state_update.rs
src/interactions/: mod.rs
src/interactions/commands/: info.rs  mod.rs  permanence.rs  remove_category.rs
src/interactions/commands/create/: join_channel.rs  mod.rs  panel_message.rs  voice_category.rs
src/interactions/commands/settings/: mod.rs  privacy.rs  show.rs
src/interactions/components/: add_member_select.rs  add_member_select_option.rs  add_role_select.rs  add_role_select_option.rs  allow_member_select.rs  deny_member_select.rs  edit_channel_select.rs  kick_member_select.rs  lock_channel_select_option.rs  mod.rs  modify_bitrate_select_option.rs  modify_name_select_option.rs  modify_privacy_select.rs  modify_privacy_select_option.rs  modify_slowmode_select.rs  modify_slowmode_select_option.rs  modify_video_quality_select.rs  modify_video_quality_select_option.rs  remove_member_select.rs  remove_member_select_option.rs  remove_role_select.rs  remove_role_select_option.rs  transfer_select.rs  unlock_channel_select_option.rs  view_information_select_option.rs
src/interactions/modals/: mod.rs  modify_bitrate_modal.rs  modify_name_modal.rs  modify_user_limit_modal.rs
src/structs/: cache.rs  context.rs  database.rs  interaction.rs  mod.rs
src/utilities/: constants.rs  interaction.rs  mod.rs
(+10 files in other folders)
